# ecmotor_api

./: CMakeLists.txt  MULTI_VENDOR_GUIDE.md  eu_ethercat.h  path_example_deg.csv  test  test.cpp  test_debug.cpp  test_eni.cpp  test_path_playback.cpp
.trae/: .ignore
doc/: EYOU_ServoModule_ECAT_V143_no_slot.xml  HCFAX3E.xml
ethLab_test/: main.cpp  motor  motor.c  motor_http  motor_http_3  test.c  test3  test3.c  test_csv  test_csv.c
include/: motor_adapter.hpp  motor_api.hpp  vendor_adapters.hpp
motor_api/: CMakeLists.txt
motor_api/doc/: INEXBOT-IO-R4-1-HCFA_X5E_Servo_Driver-3.xml
motor_api/examples/: example_csp.c
motor_api/include/: motor_api.h
motor_api/src/: motor_api.c
src/: motor_adapter.cpp  motor_api.cpp  vendor_adapters.cpp
